# DiffusionCurves

./: .gitignore  CMakeLists.txt  README.md  README.tex.md  main.cpp  main.h  opengl.cpp  opengl.h
include/: fd_grad.h  fd_partial_derivative.h
include/diffusion/: apply_blur.h  fd_grad.h  fd_partial_derivative.h  interpolate_control.h  plot_line.h  rasterize_color.h  rasterize_gaussian.h  rasterize_norms.h  rasterize_samples.h  solve_diffusion.h  solve_gaussian.h  subdivide_bezier.h
include/graphics/: Bezier.h  BitmapRender.h  ColorCurve.h  Curve.h  GaussianCurve.h  OpenglUtil.h  Point.h  SolveWrappers.h  Util.h
include/reconstruction/: EdgeStack.h  GaussianStack.h  PixelChain.h  findBestPath.h  potrace.h  sampleAlongNormal.h  sampleBezierColours.h  traceEdgePixels.h
include/util/: argb.h  util.h
src/: fd_grad.cpp  fd_partial_derivative.cpp
src/diffusion/: apply_blur.cpp  fd_grad.cpp  fd_partial_derivative.cpp  plot_line.cpp  rasterize_color.cpp  rasterize_gaussian.cpp  rasterize_norms.cpp  rasterize_samples.cpp  solve_diffusion.cpp  solve_gaussian.cpp  subdivide_bezier.cpp
src/graphics/: Bezier.cpp  BitmapRender.cpp  ColorCurve.cpp  Curve.cpp  GaussianCurve.cpp  OpenglUtil.cpp  Point.cpp  SolveWrappers.cpp  Util.cpp
src/reconstruction/: EdgeStack.cpp  GaussianStack.cpp  PixelChain.cpp  findBestPath.cpp  potrace.cpp  sampleAlongNormal.cpp  sampleBezierColours.cpp  traceEdgePixels.cpp
src/util/: argb.cpp  util.cpp
writeup/: entry.md
